--- a/site.css
+++ b/site.css
@@ -28,6 +28,12 @@ body {
     /*overflow: hidden;*/
 }
 
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 /* PANELS */
 .btn-panel{
     width: 100%;
@@ -40,7 +46,7 @@ body {
 .scheme-panel {
     width: 33.33%;
     float: left;
-    height: 300px;
+    height: 350px;
     padding: 100px;
 }
 
@@ -50,6 +56,7 @@ body {
   height: 150px;
   padding: 100px;
 }
+
 
 /* BUTTONS */
 button {
@@ -88,6 +95,14 @@ button {
   margin-bottom: 130px;
 }
 
+.poison{
+  text-align: center;
+  font-size: 80px;
+  font-weight: 100;
+  color: #000000;
+  margin-bottom: 130px;
+}
+
 .active { background-color: #f7f7f7; }
 .active .player { font-weight: 300; }
 
@@ -116,6 +131,42 @@ button {
     color: #222;
 }
 
-.player-current-life {
+.player-current-life,
+.player-current-poison {
     font-size: 30px;
+}
+
+.final {
+    position: absolute;
+    left: 50%;
+    transform:  translateX(-50%);
+    top: 520px;
+    color: #555;
+    font-size: 18px;
+    font-family: 'Lato';
+    text-align: center;
+    padding: 10px;
+    width: 160px;
+    text-transform: uppercase;
+}
+
+.final:focus { outline: none; }
+
+.winner { background-color: #f7f7f7; }
+.winner .player {
+    font-weight: 300;
+    color: #EB4D4D;
+}
+
+/*SCHEMES*/
+.scheme {
+    /*position: absolute;*/
+    left: 10%;
+    transform: translateX(-50%);
+    height: 300px;
+    box-shadow: 0px 10px 60px rgba(0,0,0,0.10);
+}
+
+.scheme .ongoing {
+    height: 100px;
 }
