--- a/site.css
+++ b/site.css
@@ -18,9 +18,10 @@ body {
 }
 
 .wrapper {
-    width: 1000px;
+    background: rgba(0,0,0,0.45);
+    width: 90% /*1000px*/;
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
@@ -46,14 +47,14 @@ body {
 .scheme-panel {
     width: 33.33%;
     float: left;
-    height: 350px;
+    height: 500px;
     padding: 100px;
 }
 
 .ongoing-panel{
-  width: 100%;
+  width: 90%;
   float: left;
-  height: 150px;
+  height: 200px;
   padding: 100px;
 }
 
@@ -63,7 +64,7 @@ button {
     /*position: absolute;*/
     width: 200px;
     left: 50%;
-    transform: translateX(-50%);
+    /*transform: translateX(-50%);*/
     color: #555;
     background: none;
     border: none;
@@ -74,6 +75,10 @@ button {
     font-weight: 300;
     transition: background-color 0.3s, color 0.3s;
 }
+
+button:hover { font-weight: 600; }
+button:hover i { margin-right: 20px; }
+button:focus{ outline: none; }
 
 /* PLAYERS*/
 .player {
@@ -161,12 +166,20 @@ button {
 /*SCHEMES*/
 .scheme {
     /*position: absolute;*/
-    left: 10%;
-    transform: translateX(-50%);
+    /*left: 10%;*/
+    /*transform: translateX(-50%);*/
+    top: 10px;
     height: 300px;
-    box-shadow: 0px 10px 60px rgba(0,0,0,0.10);
+    box-shadow: 5px 10px 15px rgba(0,0,0,0.69);
 }
 
-.scheme .ongoing {
+.ongoing {
     height: 100px;
+    width: 33.33%;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.69);
+}
+
+.scheme-mini {
+    height: 90px;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.69);
 }
