--- a/site.css
+++ b/site.css
@@ -10,7 +10,7 @@ body {
     background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(back.jpg);
     background-size: cover;
     background-position: center;
-    font-family: Lato;
+    font-family: "Lato";
     font-weight: 300;
     position: relative;
     height: 100vh;
@@ -18,13 +18,13 @@ body {
 }
 
 .wrapper {
-    background: rgba(0,0,0,0.45);
     width: 90% /*1000px*/;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
+    background-color: rgba(0,0,0,0.45);
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
     /*overflow: hidden;*/
 }
@@ -37,9 +37,9 @@ body {
 
 /* PANELS */
 .btn-panel{
-    width: 100%;
-    height: 50px;
-    padding: 100px;
+    width: 20%;
+    height: 10%;
+    padding: 1px;
 }
 
 .archenemy-panel,
@@ -47,15 +47,17 @@ body {
 .scheme-panel {
     width: 33.33%;
     float: left;
-    height: 500px;
-    padding: 100px;
+    height: 580px;
+    padding: 5px;
+    background-color: rgba(255,255,255,0.45);
 }
 
 .ongoing-panel{
-  width: 90%;
+  width: 100%;
   float: left;
   height: 200px;
-  padding: 100px;
+  padding: 5px;
+  background-color: rgba(0,0,0,0.45);
 }
 
 
@@ -64,11 +66,11 @@ button {
     /*position: absolute;*/
     width: 200px;
     left: 50%;
-    /*transform: translateX(-50%);*/
+    transform: translateX(50px, 0px);
     color: #555;
     background: none;
     border: none;
-    font-family: Lato;
+    font-family: "Lato";
     font-size: 20px;
     text-transform: uppercase;
     cursor: pointer;
@@ -169,17 +171,18 @@ button:focus{ outline: none; }
     /*left: 10%;*/
     /*transform: translateX(-50%);*/
     top: 10px;
-    height: 300px;
+    height: 80%;
+    width: 90%;
     box-shadow: 5px 10px 15px rgba(0,0,0,0.69);
 }
 
 .ongoing {
-    height: 100px;
-    width: 33.33%;
+    height: 80%;
+    width: 20%;
     box-shadow: 5px 5px 15px rgba(0,0,0,0.69);
 }
 
 .scheme-mini {
-    height: 90px;
+    height: 85%;
     box-shadow: 5px 5px 15px rgba(0,0,0,0.69);
 }
