--- a/site.css
+++ b/site.css
@@ -1,5 +1,4 @@
 /* General */
-
 * {
   margin: 0;
   padding: 0;
@@ -18,7 +17,7 @@ body {
 }
 
 .wrapper {
-    width: 90% /*1000px*/;
+    width: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -26,7 +25,6 @@ body {
     background-color: #fff;
     background-color: rgba(0,0,0,0.45);
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
-    /*overflow: hidden;*/
 }
 
 .clearfix::after {
@@ -38,7 +36,7 @@ body {
 /* PANELS */
 .btn-panel{
     width: 20%;
-    height: 10%;
+    height: 5%;
     padding: 15px;
 }
 
@@ -47,7 +45,7 @@ body {
 .scheme-panel {
     width: 33.33%;
     float: left;
-    height: 80% /*550px*/;
+    height: 450px /*80%*/;
     padding: 5px;
     background-color: rgba(255,255,255,0.45);
 }
@@ -55,7 +53,7 @@ body {
 .ongoing-panel{
   width: 100%;
   float: left;
-  height: 20%/*200px*/;
+  height: 150px /*20%*/;
   padding: 5px;
   background-color: rgba(0,0,0,0.45);
 }
@@ -63,13 +61,11 @@ body {
 
 /* BUTTONS */
 button {
-    /*position: absolute;*/
     width: 200px;
     left: 50%;
     transform: translateX(50px, 0px);
     color: #555;
     background: none;
-    /*border: none;*/
     font-family: "Lato";
     font-size: 20px;
     text-transform: uppercase;
@@ -172,11 +168,12 @@ button:focus{ outline: none; }
 
 /*SCHEMES*/
 .scheme {
-    /*position: absolute;*/
-    /*left: 10%;*/
-    /*transform: translateX(-50%);*/
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    left: 10%;
     top: 10px;
-    height: 80%;
+    height: 90%;
     width: 90%;
     box-shadow: 5px 10px 15px rgba(0,0,0,0.69);
 }
@@ -191,3 +188,5 @@ button:focus{ outline: none; }
     height: 85%;
     box-shadow: 5px 5px 15px rgba(0,0,0,0.69);
 }
+
+/*IMAGES*/
