--- a/site.css
+++ b/site.css
@@ -6,13 +6,13 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(imgs/back.jpg);
+    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.8)), url(imgs/back.jpg);
     background-size: cover;
     background-position: center;
     font-family: "Lato";
     font-weight: 300;
     position: relative;
-    height: 100vh;
+    /*height: 100vh;*/
     color: #555;
 }
 
@@ -22,8 +22,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
-    background-color: rgba(0,0,0,0.45);
+    /*background-color: #fff;*/
+    background-color: rgba(0,0,0,0.25);
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
 }
 
@@ -47,7 +47,8 @@ body {
     float: left;
     height: 450px /*80%*/;
     padding: 5px;
-    background-color: rgba(255,255,255,0.45);
+    background-color: rgba(0,0,0,0.45);
+    /*background-color: rgba(255,255,255,0.45);*/
 }
 
 .ongoing-panel{
