--- a/site.css
+++ b/site.css
@@ -12,19 +12,23 @@ body {
     font-family: "Lato";
     font-weight: 300;
     position: relative;
-    /*height: 100vh;*/
+    height: 100vh;
     color: #555;
+}
+
+h2 .info {
+    text-transform: uppercase;
 }
 
 .wrapper {
     width: 90%;
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     /*background-color: #fff;*/
     background-color: rgba(0,0,0,0.25);
-    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+    /*box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);*/
 }
 
 .clearfix::after {
@@ -45,10 +49,11 @@ body {
 .scheme-panel {
     width: 33.33%;
     float: left;
-    height: 450px /*80%*/;
+    height: 600px /*80%*/;
+    text-transform: uppercase;
     padding: 5px;
-    background-color: rgba(0,0,0,0.45);
-    /*background-color: rgba(255,255,255,0.45);*/
+    /*background-color: rgba(0,0,0,0.45);*/
+    background-color: rgba(255,255,255,0.45);
 }
 
 .ongoing-panel{
