--- a/site.css
+++ b/site.css
@@ -21,12 +21,13 @@ h2 .info {
 }
 
 .wrapper {
-    width: 90%;
+    display: block;
+    width: 94%;
     position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0,0,0,0.25);
+    top: 3%;
+    left: 3%;
+    /*transform: translate(-50%, -50%);*/
+    background-color: rgba(0,0,0,0.45);
     /*box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);*/
 }
 
@@ -48,16 +49,15 @@ h2 .info {
 .scheme-panel {
     width: 33.33%;
     float: left;
-    height: 600px /*80%*/;
+    height: 550px /*80%*/;
     text-transform: uppercase;
     padding: 5px;
-    background-color: rgba(0,0,0,0.45);
 }
 
 .ongoing-panel{
   width: 100%;
   float: left;
-  height: 150px /*20%*/;
+  height: 280px /*20%*/;
   padding: 5px;
   background-color: rgba(0,0,0,0.45);
 }
@@ -115,8 +115,8 @@ button:focus{ outline: none; }
   margin-bottom: 130px;
 }
 
-.active { background-color: #f7f7f7; }
-.active .player { font-weight: 300; }
+/*.active { background-color: #f7f7f7; }
+.active .player { font-weight: 300; }*/
 
 .active .player::after {
     content: "\2022";
