--- a/site.css
+++ b/site.css
@@ -10,7 +10,7 @@ body {
     background-size: cover;
     background-position: center;
     font-family: "Lato";
-    font-weight: 300;
+    /*font-weight: 300;*/
     position: relative;
     height: 100vh;
     color: #555;
@@ -65,9 +65,9 @@ h2 .info {
 
 /* BUTTONS */
 button {
-    width: 200px;
-    left: 50%;
-    transform: translateX(50px, 0px);
+    position: relative;
+    /*left: 50%;*/
+    /*transform: translateX(50px, 0px);*/
     color: #555;
     background: none;
     font-family: "Lato";
@@ -82,10 +82,21 @@ button:hover { font-weight: 600; }
 button:hover i { margin-right: 20px; }
 button:focus{ outline: none; }
 
-.btn-abandon,
 .btn-game,
 .btn-player,
-.btn-scheme { border: none; }
+.btn-scheme-next,
+.btn-scheme-prev {
+    border: none;
+    width: 180px;
+ }
+
+.btn-abandon {
+  border: none;
+  font-size: 15px;
+  width: 100%;
+  -webkit-box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
+ }
 
 /* PLAYERS*/
 .player {
@@ -183,9 +194,13 @@ button:focus{ outline: none; }
 }
 
 .ongoing {
-    height: 80%;
-    width: 20%;
+    height:  80%;
+    width: 100%;
     box-shadow: 5px 5px 15px rgba(0,0,0,0.69);
+}
+
+.img-ongoing{
+    position: relative;
 }
 
 .scheme-mini {
@@ -193,4 +208,46 @@ button:focus{ outline: none; }
     box-shadow: 5px 5px 15px rgba(0,0,0,0.69);
 }
 
+p .effect-title {
+    border-bottom: 6px solid red;
+    background-color: lightgrey;
+}
+.header{
+    font-size: 25px;
+    font-weight: 600px;
+}
+
+.effect-box {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  width: 100% auto;
+  padding: 2px;
+  overflow: hidden;
+  border: 1px rgba(255,0,0,0.85);
+  color: rgba(255,255,255,0.5);
+  text-align: center;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  background: -webkit-linear-gradient(-90deg, rgba(210,244,146,1) 0, rgba(0,0,0,0.6) 1%, rgba(83,84,80,0.75) 100%);
+  background: -moz-linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(0,0,0,0.6) 1%, rgba(83,84,80,0.75) 100%);
+  background: linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(0,0,0,0.6) 1%, rgba(83,84,80,0.75) 100%);
+  background-position: 90% 50%;
+  -webkit-background-origin: padding-box;
+  background-origin: padding-box;
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+  -webkit-background-size: auto auto;
+  background-size: auto auto;
+  -webkit-box-shadow: 1px 1px 2px 0 rgba(0,0,0,0.85) ;
+  box-shadow: 1px 1px 2px 0 rgba(0,0,0,0.85) ;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.2) ;
+}
+
+.effect-x {
+  border-top: 3px solid rgba(0,0,0,0.85);
+  border-left: 3px solid rgba(0,0,0,0.85);
+  border-right: 3px outset rgba(160,0,0,0.85);
+  border-bottom: 3px outset rgba(160,0,0,0.85);
+}
 /*IMAGES*/
